[gd_scene load_steps=40 format=3 uid="uid://b0krhlmapyjp3"]

[ext_resource type="PackedScene" uid="uid://bvlsnxcaagq3r" path="res://UI/house_card.tscn" id="1_xtr25"]
[ext_resource type="Script" path="res://UI/statsUI/StatsUi.gd" id="2_g15dv"]
[ext_resource type="Texture2D" uid="uid://cihdmi2wqfamr" path="res://UI/statsUI/UI_SpriteSheet.png" id="5_6uqes"]
[ext_resource type="LabelSettings" uid="uid://caqxmmeh7x3jl" path="res://UI/mainUILabelSettings.tres" id="5_qkcwe"]
[ext_resource type="Script" path="res://UI/statsUI/DayIndicator.gd" id="6_fk8a3"]
[ext_resource type="Texture2D" uid="uid://ck0v2xhou51mh" path="res://UI/statsUI/ui_housetooltip_fish_strip4.png" id="6_v2m0y"]
[ext_resource type="Texture2D" uid="uid://dr2ijn27p0b4e" path="res://assets/VisualAssets/barBubbles.png" id="7_dqa7x"]
[ext_resource type="Script" path="res://UI/statsUI/gameOverDisplay.gd" id="7_smfhu"]
[ext_resource type="Texture2D" uid="uid://bciwpbtvrkl44" path="res://assets/bomb.png" id="7_vdsd5"]
[ext_resource type="Script" path="res://UI/BuldingMenu/BuildingTray.gd" id="8_r84q3"]
[ext_resource type="PackedScene" uid="uid://sfsnkv77s25d" path="res://UI/Options/OptionsMenu.tscn" id="8_s3b0f"]
[ext_resource type="Texture2D" uid="uid://b5vorj4yp26ok" path="res://assets/UI/More_UI_Stuff.png" id="11_nkv7f"]
[ext_resource type="AudioStream" uid="uid://3qy7042o1prb" path="res://assets/audio/sfx/fog horn.wav" id="12_eqpne"]

[sub_resource type="AtlasTexture" id="AtlasTexture_67823"]
atlas = ExtResource("5_6uqes")
region = Rect2(0, 0, 113, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwgeq"]
atlas = ExtResource("5_6uqes")
region = Rect2(320, 26, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr56g"]
atlas = ExtResource("5_6uqes")
region = Rect2(76, 69, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_keqth"]
atlas = ExtResource("5_6uqes")
region = Rect2(120, 69, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_setww"]
atlas = ExtResource("5_6uqes")
region = Rect2(110, 69, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_al5di"]
atlas = ExtResource("5_6uqes")
region = Rect2(87, 68, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_06icr"]
atlas = ExtResource("5_6uqes")
region = Rect2(97, 68, 11, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_x20ui"]
atlas = ExtResource("5_6uqes")
region = Rect2(129, 0, 31, 30)

[sub_resource type="ImageTexture" id="ImageTexture_b7gbo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7pym"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.4)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jr6ww"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2cg76"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.75, 0.75, 0.75, 0.75)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1alu"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikih3"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_5eq63"]
VScrollBar/icons/decrement = SubResource("ImageTexture_b7gbo")
VScrollBar/icons/decrement_highlight = SubResource("ImageTexture_b7gbo")
VScrollBar/icons/decrement_pressed = SubResource("ImageTexture_b7gbo")
VScrollBar/icons/increment = SubResource("ImageTexture_b7gbo")
VScrollBar/icons/increment_highlight = SubResource("ImageTexture_b7gbo")
VScrollBar/icons/increment_pressed = SubResource("ImageTexture_b7gbo")
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_k7pym")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_jr6ww")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_2cg76")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_i1alu")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_ikih3")

[sub_resource type="AtlasTexture" id="AtlasTexture_4oa2j"]
atlas = ExtResource("11_nkv7f")
region = Rect2(74, 64, 182, 274)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0uca"]
atlas = ExtResource("11_nkv7f")
region = Rect2(28, 176, 43, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_na7g3"]
atlas = ExtResource("11_nkv7f")
region = Rect2(19, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlhna"]
atlas = ExtResource("5_6uqes")
region = Rect2(20, 133, 28, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_08qw7"]
atlas = ExtResource("5_6uqes")
region = Rect2(64, 136, 352, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cmyw"]
atlas = ExtResource("5_6uqes")
region = Rect2(64, 104, 352, 16)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_d1dlp"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r5fkw"]
lifetime_randomness = 0.8
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 7.0
spread = 5.0
initial_velocity_min = 103.23
initial_velocity_max = 116.13
angular_velocity_min = -15.0
angular_velocity_max = 15.0
radial_velocity_min = 5.0
radial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_offset_max = 1.0
turbulence_noise_speed = Vector3(1, 0.1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6ouy"]
atlas = ExtResource("5_6uqes")
region = Rect2(418, 125, 26, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtyms"]
atlas = ExtResource("5_6uqes")
region = Rect2(22, 71, 31, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ouf1"]
atlas = ExtResource("6_v2m0y")
region = Rect2(0, 0, 95, 16)

[node name="MainUI" type="CanvasLayer"]

[node name="TopLeftContainer" type="VBoxContainer" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_bottom = 0.589
offset_left = 14.0
offset_top = 12.0
offset_right = 131.0
offset_bottom = -368.84
grow_horizontal = 2
scale = Vector2(2.5, 2.5)

[node name="DayIndicator" type="TextureRect" parent="TopLeftContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_67823")
script = ExtResource("6_fk8a3")

[node name="Sun" type="TextureRect" parent="TopLeftContainer/DayIndicator"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -20.5
offset_right = -0.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(21, 21)
texture = SubResource("AtlasTexture_fwgeq")

[node name="Label" type="Label" parent="TopLeftContainer/DayIndicator"]
layout_mode = 0
offset_left = 11.0
offset_top = 16.0
offset_right = 76.0
offset_bottom = 67.0
scale = Vector2(0.75, 0.75)
text = "Day
1"
label_settings = ExtResource("5_qkcwe")
horizontal_alignment = 1

[node name="PauseButton" type="TextureButton" parent="TopLeftContainer/DayIndicator"]
layout_mode = 0
offset_left = 70.4
offset_top = 37.6
offset_right = 78.4
offset_bottom = 45.6
focus_mode = 0
toggle_mode = true
texture_normal = SubResource("AtlasTexture_fr56g")
texture_pressed = SubResource("AtlasTexture_keqth")
texture_hover = SubResource("AtlasTexture_setww")

[node name="SpeedButton" type="TextureButton" parent="TopLeftContainer/DayIndicator"]
layout_mode = 0
offset_left = 80.8
offset_top = 37.2
offset_right = 102.8
offset_bottom = 47.2
focus_mode = 0
toggle_mode = true
texture_normal = SubResource("AtlasTexture_al5di")
texture_pressed = SubResource("AtlasTexture_06icr")
texture_hover = SubResource("AtlasTexture_al5di")

[node name="TopRightContainer" type="VBoxContainer" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.06
offset_left = -64.0
offset_right = -33.0
offset_bottom = -32.48
grow_horizontal = 2
scale = Vector2(2, 2)

[node name="SettingsBtn" type="TextureButton" parent="TopRightContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_x20ui")

[node name="OptionsMenu" parent="." instance=ExtResource("8_s3b0f")]
visible = false

[node name="BuildingContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -162.0
offset_bottom = 123.0
grow_horizontal = 0
grow_vertical = 2

[node name="BuildingTray" type="TextureRect" parent="BuildingContainer"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -115.0
offset_right = 15.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5eq63")
texture = SubResource("AtlasTexture_4oa2j")
script = ExtResource("8_r84q3")

[node name="ColorRect" type="ScrollContainer" parent="BuildingContainer/BuildingTray"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -250.5
offset_right = 153.5
offset_bottom = 251.5
grow_horizontal = 2
grow_vertical = 2

[node name="BuldingMenu" type="GridContainer" parent="BuildingContainer/BuildingTray/ColorRect"]
layout_mode = 2
columns = 2

[node name="HouseCard" parent="BuildingContainer/BuildingTray/ColorRect/BuldingMenu" instance=ExtResource("1_xtr25")]
layout_mode = 2

[node name="HouseCard2" parent="BuildingContainer/BuildingTray/ColorRect/BuldingMenu" instance=ExtResource("1_xtr25")]
layout_mode = 2

[node name="HouseCard3" parent="BuildingContainer/BuildingTray/ColorRect/BuldingMenu" instance=ExtResource("1_xtr25")]
layout_mode = 2

[node name="TrayButton" type="TextureButton" parent="BuildingContainer/BuildingTray"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -24.5
offset_right = -1.0
offset_bottom = 11.5
grow_vertical = 2
toggle_mode = true
texture_normal = SubResource("AtlasTexture_d0uca")
texture_pressed = SubResource("AtlasTexture_na7g3")

[node name="foghorn sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_eqpne")
volume_db = -10.306
bus = &"Gameplay"

[node name="DangerIndicator" type="HBoxContainer" parent="."]
visible = false
texture_filter = 1
offset_left = 564.0
offset_top = 806.0
offset_right = 981.0
offset_bottom = 856.0
scale = Vector2(2, 2)
script = ExtResource("7_smfhu")

[node name="TextureRect" type="TextureRect" parent="DangerIndicator"]
layout_mode = 2
texture = SubResource("AtlasTexture_dlhna")
stretch_mode = 3

[node name="Control" type="Control" parent="DangerIndicator"]
custom_minimum_size = Vector2(355, 0)
layout_mode = 2

[node name="gameOverBar" type="TextureProgressBar" parent="DangerIndicator/Control"]
clip_children = 2
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -8.0
offset_right = 352.0
offset_bottom = 8.0
grow_vertical = 2
size_flags_horizontal = 4
texture_over = SubResource("AtlasTexture_08qw7")
texture_progress = SubResource("AtlasTexture_6cmyw")
texture_progress_offset = Vector2(1, 0)

[node name="Control" type="Control" parent="DangerIndicator/Control/gameOverBar"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 342.0
offset_bottom = 14.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="DangerIndicator/Control/gameOverBar/Control"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_d1dlp")
position = Vector2(-5.5, 6)
scale = Vector2(0.949345, 0.801313)
amount = 100
process_material = SubResource("ParticleProcessMaterial_r5fkw")
texture = ExtResource("7_dqa7x")
lifetime = 2.5
randomness = 1.0

[node name="warningIcon" type="TextureRect" parent="DangerIndicator"]
layout_mode = 2
texture = SubResource("AtlasTexture_y6ouy")
stretch_mode = 3

[node name="HomelessFishContainer" type="Control" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -311.0
offset_top = -52.0
offset_right = -261.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="HomelessFish" type="VBoxContainer" parent="HomelessFishContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -79.0
offset_right = -113.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 4
script = ExtResource("2_g15dv")

[node name="MainLabel" type="HBoxContainer" parent="HomelessFishContainer/HomelessFish"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HomelessFishContainer/HomelessFish/MainLabel"]
layout_mode = 2
texture = SubResource("AtlasTexture_gtyms")

[node name="Label" type="Label" parent="HomelessFishContainer/HomelessFish/MainLabel"]
layout_mode = 2
text = "3/5"
label_settings = ExtResource("5_qkcwe")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HomelessFishContainer/HomelessFish"]
layout_mode = 2
texture = SubResource("AtlasTexture_2ouf1")
stretch_mode = 2

[node name="FishNumbers" type="Control" parent="HomelessFishContainer/HomelessFish"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="fishLabel0" type="Label" parent="HomelessFishContainer/HomelessFish/FishNumbers"]
layout_mode = 0
offset_left = 13.6
offset_right = 21.6
offset_bottom = 18.0
text = "3"
label_settings = ExtResource("5_qkcwe")

[node name="fishLabel1" type="Label" parent="HomelessFishContainer/HomelessFish/FishNumbers"]
layout_mode = 0
offset_left = 44.8
offset_right = 52.8
offset_bottom = 18.0
text = "0"
label_settings = ExtResource("5_qkcwe")

[node name="fishLabel2" type="Label" parent="HomelessFishContainer/HomelessFish/FishNumbers"]
layout_mode = 0
offset_left = 74.4
offset_right = 82.4
offset_bottom = 18.0
text = "0"
label_settings = ExtResource("5_qkcwe")

[node name="fishLabel3" type="Label" parent="HomelessFishContainer/HomelessFish/FishNumbers"]
visible = false
layout_mode = 0
offset_left = 107.2
offset_right = 115.2
offset_bottom = 18.0
text = "0"
label_settings = ExtResource("5_qkcwe")

[node name="BOmb" type="HBoxContainer" parent="HomelessFishContainer/HomelessFish"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="HomelessFishContainer/HomelessFish/BOmb"]
layout_mode = 2
icon = ExtResource("7_vdsd5")

[connection signal="toggled" from="TopLeftContainer/DayIndicator/PauseButton" to="TopLeftContainer/DayIndicator" method="_on_pause_button_toggled"]
[connection signal="pressed" from="TopLeftContainer/DayIndicator/SpeedButton" to="TopLeftContainer/DayIndicator" method="_on_button_pressed"]
[connection signal="toggled" from="TopLeftContainer/DayIndicator/SpeedButton" to="TopLeftContainer/DayIndicator" method="_on_speed_button_toggled"]
[connection signal="pressed" from="TopRightContainer/SettingsBtn" to="OptionsMenu" method="_on_option_btn_pressed"]
[connection signal="pressed" from="BuildingContainer/BuildingTray/TrayButton" to="BuildingContainer/BuildingTray" method="_on_tray_button_pressed"]
[connection signal="toggled" from="HomelessFishContainer/HomelessFish/BOmb/Button" to="HomelessFishContainer/HomelessFish/BOmb" method="_on_button_toggled"]
